chore: documentation and restructuring
